...
        modes.forEach { m ->
            Tab(
                selected = m == mode,
                onClick = { onChange(m) },
                text = {
                    Text(
                        text = if (m == CryptoViewModel.Mode.ENCRYPT) "Cifrar" else "Descifrar",
                        fontWeight = if (m == mode) FontWeight.Bold else FontWeight.Normal
                    )
                }
            )
        }
    }
...
